Initial WIP pass at working on syncing newer fabric features to the neo branch