@@ -1,43 +1,44 @@
 /*
-    Wildfire's Female Gender Mod is a female gender mod created for Minecraft.
-    Copyright (C) 2023 WildfireRomeo
-
-    This program is free software; you can redistribute it and/or
-    modify it under the terms of the GNU Lesser General Public
-    License as published by the Free Software Foundation; either
-    version 3 of the License, or (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-    Lesser General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-*/
+ * Wildfire's Female Gender Mod is a female gender mod created for Minecraft.
+ * Copyright (C) 2023-present WildfireRomeo
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 3 of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
 
 package com.wildfire.main;
 
+import com.google.common.cache.CacheBuilder;
+import com.google.common.cache.CacheLoader;
+import com.google.common.cache.LoadingCache;
 import com.mojang.logging.LogUtils;
 import com.wildfire.api.IGenderArmor;
 import com.wildfire.api.WildfireAPI;
-import com.wildfire.main.config.GeneralClientConfig;
+import com.wildfire.client.WildfireGenderClient;
 import com.wildfire.main.entitydata.BreastDataComponent;
 import com.wildfire.main.entitydata.PlayerConfig;
 import com.wildfire.main.networking.ClientboundSyncPacket;
+import java.time.Duration;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.Future;
-import net.minecraft.Util;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.decoration.ArmorStand;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
@@ -53,6 +54,7 @@ import net.neoforged.neoforge.event.entity.EntityJoinLevelEvent;
 import net.neoforged.neoforge.event.entity.player.PlayerEvent;
 import net.neoforged.neoforge.event.entity.player.PlayerInteractEvent;
 import net.neoforged.neoforge.network.PacketDistributor;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 
@@ -62,14 +64,55 @@ public class WildfireGender {
     public static final String MODID = WildfireAPI.MODID;
     public static final Logger LOGGER = LogUtils.getLogger();
 
-    public static Map<UUID, PlayerConfig> PLAYER_CACHE = new ConcurrentHashMap<>();
-    private static WildfireGender instance;
+    public static final UUID CREATOR_UUID = UUID.fromString("33c937ae-6bfc-423e-a38e-3a613e7c1256");
+    public static final List<UUID> CONTRIBUTOR_UUIDS = List.of(
+          UUID.fromString("70336328-0de7-430e-8cba-2779e2a05ab5"), //celeste
+          UUID.fromString("64e57307-72e5-4f43-be9c-181e8e35cc9b"), //pupnewfster
+          UUID.fromString("618a8390-51b1-43b2-a53a-ab72c1bbd8bd"), //Kichura
+          UUID.fromString("33feda66-c706-4725-8983-f62e5e6cbee7"), //BlueLight
+          UUID.fromString("ad8ee68c-0aa1-47f9-b29f-f92fa1ef66dc"), //Diademiemi
+          UUID.fromString("8fb5e95d-7f41-4b4c-b8c5-4f15ea3fa2c1"), //Arcti.cc
+          UUID.fromString("3f36f7e9-7459-43fe-87ce-4e8a5d47da80"), //IzzyBizzy45
+          UUID.fromString("525b0455-15e9-49b7-b61d-f291e8ee6c5b"), //Powerless001
+          UUID.fromString("6e0e0db3-19e9-4fa7-af76-a6d3651c57b9") //A2 76
+    );
+
+    public static final LoadingCache<UUID, PlayerConfig> CACHE;
+
+    static {
+        CacheBuilder<Object, Object> builder = CacheBuilder.newBuilder();
+        // Only automatically expire cache entries on the client; a server may go a decent while without accessing
+        // the player cache, and we can't easily re-cache a player's settings on a server, while a client
+        // will typically either receive settings from the server in a sync, or simply re-fetch from
+        // a local config file or from the cloud.
+        // Note that servers will manually invalidate cache entries upon a player disconnecting
+        // (see WildfireEventHandler#playerDisconnected).
+        if (FMLEnvironment.dist.isClient()) {
+            builder.expireAfterAccess(Duration.ofMinutes(15));
+        }
+        CACHE = builder.build(new CacheLoader<>() {
+            @Override
+            public @NotNull PlayerConfig load(@NotNull UUID key) {
+                PlayerConfig config = new PlayerConfig(key);
+                // only attempt to load player data on the client, and if the provided uuid is valid
+                if (FMLEnvironment.dist.isClient() && key.version() == 4) {
+                    // markForSync being true will only ever do anything for the client player
+                    WildfireGenderClient.loadGenderInfo(config, true, false);
+                }
+                return config;
+            }
+        });
+    }
+
+    public static WildfireGender INSTANCE;
 
     //Tracked player to the set of tracking players
     private final Map<UUID, Set<ServerPlayer>> trackedPlayers = new HashMap<>();
+    public final ModContainer container;
 
-    public WildfireGender(IEventBus modEventBus) {
-        instance = this;
+    public WildfireGender(ModContainer modContainer, IEventBus modEventBus) {
+        INSTANCE = this;
+        this.container = modContainer;
 
         modEventBus.addListener(WildfireHelper::registerCapabilities);
         modEventBus.addListener(WildfireHelper::registerPackets);
@@ -84,16 +127,16 @@ public class WildfireGender {
     }
 
     public static Set<ServerPlayer> getTrackers(Player target) {
-        return instance.trackedPlayers.getOrDefault(target.getUUID(), Set.of());
+        return INSTANCE.trackedPlayers.getOrDefault(target.getUUID(), Collections.emptySet());
     }
 
     @Nullable
     public static PlayerConfig getPlayerById(UUID id) {
-        return PLAYER_CACHE.get(id);
+        return CACHE.getIfPresent(id);
     }
 
     public static PlayerConfig getOrAddPlayerById(UUID id) {
-        return PLAYER_CACHE.computeIfAbsent(id, PlayerConfig::new);
+        return CACHE.getUnchecked(id);
     }
 
     private void onStartTracking(PlayerEvent.StartTracking evt) {
@@ -208,8 +251,4 @@ public class WildfireGender {
             }
         }
     }
-
-  	public static Future<Optional<PlayerConfig>> loadGenderInfo(UUID uuid, boolean markForSync) {
-  	  	return Util.ioPool().submit(() -> Optional.ofNullable(PlayerConfig.loadCachedPlayer(uuid, markForSync)));
-  	}
 }
